objects/ssot__ChangeRequestRelatedIssue__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ChangeRequestId__c</fullName>
        <label>Change Request</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChangeRequestRelatedIssueNumber__c</fullName>
        <label>Change Request Related Issue Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Change Request Related Issue Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedIssueId__c</fullName>
        <label>Related Issue</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedIssueObject__c</fullName>
        <label>Related Issue Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelationshipTypeName__c</fullName>
        <label>Relationship Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009446526_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ChangeRequestRelatedIssue_ChangeRequ_rel</label>
        <referenceTo>ssot__ChangeRequest__dlm</referenceTo>
        <relationshipLabel>ChangeRequestRelatedIssue_ChangeRequ_rel</relationshipLabel>
        <relationshipName>rel_1702009446526_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009446807_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ChangeRequestRelatedIssue_RelatedIss_rel</label>
        <referenceTo>ssot__Problem__dlm</referenceTo>
        <relationshipLabel>ChangeRequestRelatedIssue_RelatedIss_rel</relationshipLabel>
        <relationshipName>rel_1702009446807_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009448104_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ChangeRequestRelatedIssue_RelatedIss_rel</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>ChangeRequestRelatedIssue_RelatedIss_rel</relationshipLabel>
        <relationshipName>rel_1702009448104_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>